# data-max

./: CHANGELOG.md  CMakeLists.txt  IDEAS.md  Makefile  README.md  TODO.md
.github/workflows/: build-package.yml
examples/: sample.csv  sample.xlsx
help/: dataframe.maxhelp  demo.maxhelp  matplotx.maxhelp  simplejs.maxhelp  xlsxw.maxhelp
jsextensions/: maxclasswrap.js
source/projects/dataframe/: CMakeLists.txt  dataframe.cpp
source/projects/demo/: CMakeLists.txt  demo.c
source/projects/matplotx/: CMakeLists.txt  README.md  matplotx.cpp
source/projects/simplejs/: simplejs.c  simplejs_test.js
source/projects/xlsxw/: CMakeLists.txt  README.md  xlsxw.c
source/scripts/: install_deps.sh  remove_macos_externals_quarantine.sh
source/tests/test_dataframe/: CMakeLists.txt  test_dataframe.cpp
source/tests/test_eigen/: CMakeLists.txt  test_eigen.cpp
source/tests/test_numcpp/: CMakeLists.txt
source/tests/test_numcpp2/: CMakeLists.txt  README.md  test_numcpp.cpp
